# sorting

./: Bucket sort.c  README.md  meson.build
meson/: wildcard
src/: algo.cpp  algo.h  main.cpp
